--- a/canvas_image/canvas.html
+++ b/canvas_image/canvas.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--
 <html>
     <head>
         <meta charset="UTF-8">
@@ -8,10 +9,18 @@
     <body>
         <canvas id="canvas" resize></canvas>
     </body>
-    
+
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript">
         tti.init([6]);
         tti.start();
     </script>
 </html>
+-->
+
+<canvas id="myCanvas" width="400" height="400"
+style="border:1px solid #c3c3c3;">
+Your browser does not support the HTML5 canvas tag.
+</canvas>
+
+<script type="text/javascript" src="js/main.js"></script>
