--- a/main/canvas.html
+++ b/main/canvas.html
@@ -6,6 +6,11 @@
         <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <div id="info">
+            <h1>Information</h1>
+            <h2 id="i_x">Information</h2>
+            <h2 id="i_y">Information</h2>
+        </div>
         <canvas id="canvas" resize></canvas>
     </body>
     
