jquery + color picker

--- a/canvas_image/canvas.html
+++ b/canvas_image/canvas.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
-<!--
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
-        <canvas id="canvas" resize></canvas>
-    </body>
+<link rel="stylesheet" href="css/style.css"/>
+<script type="text/javascript" src="vendor/jquery-1.11.2.min.js"></script>
+<input type="color" onChange="currentColor = this.value">
+<div onClick="drawPixel(1,2)">
+CLICK ME!
+</div>
 
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript">
-        tti.init([6]);
-        tti.start();
-    </script>
-</html>
--->
 
 <canvas id="myCanvas" width="400" height="400"
 style="border:1px solid #c3c3c3;">
