--- a/canvas_image/canvas.html
+++ b/canvas_image/canvas.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="css/style.css"/>
 <script type="text/javascript" src="vendor/jquery-1.11.2.min.js"></script>
-<input type="color" onChange="currentColor = this.value">
-<div onClick="drawPixel(1,2)">
-CLICK ME!
-</div>
+<input type="color" value="#ffffff" onChange="currentColor = this.value">
 
 
 <canvas id="myCanvas" width="400" height="400"
