--- a/canvas_image/canvas.html
+++ b/canvas_image/canvas.html
@@ -3,6 +3,9 @@
 <script type="text/javascript" src="vendor/jquery-1.11.2.min.js"></script>
 <input type="color" value="#ffffff" onChange="currentColor = this.value">
 
+<input type="button" id="b1" value="Fill">
+<input type="button" id="b2" value="Erase">
+
 
 <canvas id="myCanvas" width="400" height="400"
 style="border:1px solid #c3c3c3;">
