added movement information, jumping animation

--- a/main/canvas.html
+++ b/main/canvas.html
@@ -8,15 +8,16 @@
     <body>
         <div id="info">
             <h1>Information</h1>
-            <h2 id="i_x">Information</h2>
-            <h2 id="i_y">Information</h2>
+            <h2 id="i_x">user_x</h2>
+            <h2 id="i_y">user_y</h2>
+            <h2 id="i_movement">movement: Resting</h2>
         </div>
         <canvas id="canvas" resize></canvas>
     </body>
     
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript">
-        hab.init([6]);
+        hab.init([]);
         hab.start();
     </script>
     
